Add missing volcano.sh rbac

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -184,3 +184,11 @@ rules:
       - get
       - patch
       - update
+  - apiGroups:
+      - scheduling.volcano.sh
+    resources:
+      - podgroups
+    verbs:
+      - get
+      - create
+      - update
