Elaborate savepoint and update features (#107)
* improve update and savepoint stability

* Organize savepoint handling and related routines

* Applied new job stop, update, restart routine

* fix savepoint and update routines

- fix handling failed auto savepoint
- fix validations and tests related to changes
- improve update routine
- change the behavior of handling unexpected jobs
- add a constraint for update: when takeSavepointOnUpdate is true, latest savepoint age should be less than maxStateAgeToRestore

--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -749,6 +749,10 @@ spec:
                     type: array
                   jarFile:
                     type: string
+                  maxStateAgeToRestoreSeconds:
+                    format: int32
+                    minimum: 0
+                    type: integer
                   mode:
                     type: string
                   noLoggingToStdout:
@@ -854,7 +858,7 @@ spec:
                             type: string
                         type: object
                     type: object
-                  takeSavepointOnUpgrade:
+                  takeSavepointOnUpdate:
                     type: boolean
                   volumeMounts:
                     items:
@@ -6166,9 +6170,6 @@ spec:
             type: object
           status:
             properties:
-              collisionCount:
-                format: int32
-                type: integer
               components:
                 properties:
                   configMap:
@@ -6186,19 +6187,17 @@ spec:
                       completionTime:
                         format: date-time
                         type: string
+                      deployTime:
+                        type: string
                       failureReasons:
                         items:
                           type: string
                         type: array
+                      finalSavepoint:
+                        type: boolean
                       fromSavepoint:
                         type: string
                       id:
-                        type: string
-                      lastSavepointTime:
-                        type: string
-                      lastSavepointTriggerID:
-                        type: string
-                      lastSavepointTriggerTime:
                         type: string
                       name:
                         type: string
@@ -6209,6 +6208,10 @@ spec:
                         format: int32
                         type: integer
                       savepointLocation:
+                        type: string
+                      savepointTime:
+                        type: string
+                      startTime:
                         type: string
                       state:
                         type: string
@@ -6317,12 +6320,18 @@ spec:
                 - state
                 - updateTime
                 type: object
-              currentRevision:
-                type: string
               lastUpdateTime:
                 type: string
-              nextRevision:
-                type: string
+              revision:
+                properties:
+                  collisionCount:
+                    format: int32
+                    type: integer
+                  currentRevision:
+                    type: string
+                  nextRevision:
+                    type: string
+                type: object
               savepoint:
                 properties:
                   jobID:
