--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -47,13 +47,14 @@ spec:
           args:
             - --enable-leader-election
           image: controller:latest
+          imagePullPolicy: Never
           name: manager
           securityContext:
             allowPrivilegeEscalation: false
           resources:
             limits:
-              cpu: 100m
-              memory: 30Mi
+              cpu: 1
+              memory: 1Gi
             requests:
               cpu: 100m
               memory: 20Mi
