--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -147,7 +147,7 @@ rules:
     verbs:
       - get
   - apiGroups:
-      - extensions
+      - networking.k8s.io
     resources:
       - ingresses
     verbs:
@@ -159,7 +159,7 @@ rules:
       - update
       - watch
   - apiGroups:
-      - extensions
+      - networking.k8s.io
     resources:
       - ingresses/status
     verbs:
