--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -38,6 +38,15 @@ spec:
               type: object
             spec:
               properties:
+                batchScheduler:
+                  properties:
+                    name:
+                      type: string
+                    queue:
+                      type: string
+                  required:
+                    - name
+                  type: object
                 batchSchedulerName:
                   type: string
                 envFrom:
