--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,7 @@ jobs:
     name: Push Docker image to GitHub Packages
     runs-on: ubuntu-latest
     env:
-      DOCKER_REPO: moonsub-kim/flink-operator
+      DOCKER_REPO: gos16052/flink-operator
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
