--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -766,7 +766,7 @@ spec:
                       additionalProperties:
                         type: string
                       type: object
-                    python:
+                    pythonFile:
                       type: string
                     resources:
                       properties:
