--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -42,6 +42,8 @@ spec:
                   properties:
                     name:
                       type: string
+                    priorityClassName:
+                      type: string
                     queue:
                       type: string
                   required:
