Support python args with JAR

--- a/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
+++ b/config/crd/bases/flinkoperator.k8s.io_flinkclusters.yaml
@@ -768,6 +768,10 @@ spec:
                       type: object
                     pythonFile:
                       type: string
+                    pythonFiles:
+                      type: string
+                    pythonModule:
+                      type: string
                     resources:
                       properties:
                         limits:
