update flink dockerfile

--- a/images/flink/Makefile
+++ b/images/flink/Makefile
@@ -9,7 +9,8 @@ build:
 		--build-arg FLINK_VERSION=${FLINK_VERSION} \
 		--build-arg SCALA_VERSION=${SCALA_VERSION} \
 		--build-arg FLINK_HADOOP_VERSION=${FLINK_HADOOP_VERSION} \
-		--build-arg GCS_CONNECTOR_VERSION=${GCS_CONNECTOR_VERSION}
+		--build-arg GCS_CONNECTOR_VERSION=${GCS_CONNECTOR_VERSION} \
+		--build-arg PYTHON_VERSION=${PYTHON_VERSION}
 
 # Push the docker image
 push:
