--- a/config/samples/flinkoperator_v1beta1_flinkjobcluster_volcano.yaml
+++ b/config/samples/flinkoperator_v1beta1_flinkjobcluster_volcano.yaml
@@ -27,14 +27,14 @@ spec:
       ui: 8081
     resources:
       limits:
-        memory: "1024Mi"
-        cpu: "200m"
+        memory: "2048Mi"
+        cpu: "500m"
   taskManager:
     replicas: 2
     resources:
       limits:
-        memory: "1024Mi"
-        cpu: "200m"
+        memory: "2048Mi"
+        cpu: "500m"
   job:
     jarFile: ./examples/streaming/WordCount.jar
     className: org.apache.flink.streaming.examples.wordcount.WordCount
@@ -43,3 +43,4 @@ spec:
     restartPolicy: Never
   flinkProperties:
     taskmanager.numberOfTaskSlots: "1"
+    taskmanager.memory.flink.size: "1024m"
