--- a/config/samples/flinkoperator_v1beta1_flinksessioncluster_volcano.yaml
+++ b/config/samples/flinkoperator_v1beta1_flinksessioncluster_volcano.yaml
@@ -28,14 +28,14 @@ spec:
       ui: 8081
     resources:
       limits:
-        memory: "1024Mi"
-        cpu: "200m"
+        memory: "2048Mi"
+        cpu: "500m"
   taskManager:
     replicas: 1
     resources:
       limits:
-        memory: "1024Mi"
-        cpu: "200m"
+        memory: "2048Mi"
+        cpu: "500m"
     volumes:
       - name: cache-volume
         emptyDir: {}
@@ -53,3 +53,4 @@ spec:
       value: bar
   flinkProperties:
     taskmanager.numberOfTaskSlots: "1"
+    taskmanager.memory.flink.size: "1024m"
