--- a/helm-chart/flink-operator/values.yaml
+++ b/helm-chart/flink-operator/values.yaml
@@ -24,7 +24,7 @@ rbac:
 
 # The defination of the operator image
 operatorImage:
-  name: ghcr.io/spotify/flink-operator:v0.3.3
+  name: ghcr.io/spotify/flink-operator:latest
   pullPolicy: IfNotPresent
 
 # Defines security context for operator container
