Change the default ns from flink-operator-system to flink-operator

--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 # Adds namespace to all resources.
-namespace: flink-operator-system
+namespace: flink-operator
 
 # Value of this field is prepended to the
 # names of all resources, e.g. a deployment named
