--- a/helm-chart/flink-operator/values.yaml
+++ b/helm-chart/flink-operator/values.yaml
@@ -1,6 +1,6 @@
 # K8s namespace where Flink operator to be deployed
 flinkOperatorNamespace:
-  name: "flink-operator-system"
+  name: flink-operator
 
 # Watch custom resources in the namespace, ignore other namespaces. If empty, all namespaces will be watched.
 watchNamespace:
